fix regression where grabbing while a 'bounce' back was happening would cause a snap to edge. Fixed the indicator animation modes to be better aligned with what action is happening. Fixed the indicator offset to correctly (not)include room if scrolling and showing indicators in both directions

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -775,7 +775,7 @@ body {
   height:7px;
   opacity:0;
   -webkit-transition-property: opacity;
-  -webkit-transition-duration: .25s;
+  -webkit-transition-duration: 0.25s;
   z-index:100;
 }
 
